# alpha-wrap-js

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy-pages.yml
example/: alpha-wrap-lib.js  alpha_wrap.wasm  index.html  test_correct_cpp.txt  test_incorrect_js.txt
example/assets/: torus_cube.ply
example/scripts/: alpha_wrap.js  alpha_wrap.wasm  main.js
example/styles/: main.css
misc/: cube_sphere.ply
src/: alpha_wrap.cpp  alpha_wrap.h  alpha_wrap_test.cpp  serializer.cpp  serializer.h  test.cpp  test.h
src/WebIDL/: alpha_wrap.idl  alpha_wrap_glue.cpp  alpha_wrap_glue.js  alpha_wrap_glue_wrapper.cpp
